--- a/styles.css
+++ b/styles.css
@@ -14,19 +14,20 @@ html {
 /* Navigation */
 .main-header {
   position: fixed;
-  top: 0;
+  top:0;
+  right: -2px;
+  left: 1px;
   width: 100%;
   background-color: #0a0a0a;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1.2rem 2rem;
+  justify-content:space-around;
+  padding: 1rem 2rem;
   z-index: 1000;
 }
 
 .logo {
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-weight: 600;
   color: #b287ff;
   flex-shrink: 0;
